polished code imports and warnings + fixed table max page 0 bug